# nca-level-set-kuf

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  test_csg_render.py
.claude/: settings.local.json
cache/: README.md
models/: fcnn.py
notebooks/: cache_demo.py  csg_render_demo.py  fcnn_basic_v1a1.py  fcnn_level_set_visualization.py  fcnn_range_models.py  level_set_demos.py  level_set_demos_quick.py  sdf_all_visualize.py  sdf_demos.py  sdf_demos_animation.py  sdf_demos_animation_quick.py  sdf_demos_basic.py  sdf_demos_quick.py  sdf_level_set_demos.py  sdf_level_set_demos_partial.py  sdf_level_set_demos_quick.py  sdf_visualizations.py  test_4d_sdf_viz.py  test_fcnn_n_perceptron.py
reports/: README.md
reports/sdf/: 4d_sdf_visualization_summary.md
stok/tree/: experiment.py  fcnn.py  point_based.py
stok/util/: paths.py  types.py
stok/util/sdf/: definitions.py  operations.py  render.py
tests/: __init__.py  test_4d_sdf_viz.py  test_cache.py  test_experiments.py  test_fcnn_n_perceptron.py  test_level_set_render.py  test_render.py  test_sdf_operations.py  test_sdf_render.py  test_sdf_similarity.py
tests/sdf/: test_sdf_operations.py  test_sdf_similarity.py
tree/: __init__.py  experiment.py  fcnn.py  point_based.py
util/: __init__.py  cache.py  eval.py  paths.py  sdf.py  types.py
util/sdf/: __init__.py  definitions.py  operations.py  render.py  similarity.py
