[project]
name = "nca-level-set-kuf"
version = "0.1.0"
description = "Signed Distance Field Operations Toolkit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy<2",
    "pillow>=10.0.0",
    "pydantic>=2.11.4",
    "scikit-image>=0.25.2",
    "torch>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["stok", "stok.tree", "stok.util", "stok.util.sdf"]
